Fixing overflow issue

--- a/css/skills.css
+++ b/css/skills.css
@@ -1,5 +1,7 @@
 .skills {
     padding:  4rem 0 5rem 0;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .logo-box{
